# worm

./: CMakeLists.txt
header/: main.h  self_cloning.h  server_manager.h
source/: klog_main.cpp  main.cpp  self_cloning.cpp  server_manager.cpp
test/: test_exec.cpp  worm_test.cpp
